BuildHughes/translation-tool/inputs/source_meta/objects/Geography_Satellite__c.object
<CustomObject>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Geography Satellites</relationshipLabel>
        <relationshipName>Geography_Satellites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_GeoPriority_Unique__c</fullName>
        <label>Is GeoPriority Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_GeoSatellite_Unique__c</fullName>
        <label>Is GeoSatellite Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satellite_Name__c</fullName>
        <label>Satellite Name</label>
        <referenceTo>Satellite__c</referenceTo>
        <relationshipLabel>Geography Satellites</relationshipLabel>
        <relationshipName>Geography_Satellites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Geography Satellite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GeoSat-{0000000000}</displayFormat>
        <label>Geography Satellite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geography Satellites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>